--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
     margin: 0px;
     align-items: center;
-    grid-gap: 10px;
+    grid-gap: 80px;
 }
 
 img {
@@ -46,16 +46,16 @@ button#createfoto {
     background: transparent;
     cursor: pointer;
     transition: ease-out 0.5s;
-    border: 2px solid #b35c9d;
+    border: 2px solid #b675a6;
     border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #d475a5;
+    box-shadow: inset 0 0 0 0 #c5709b;
     width: 100px;
     height: 40px;
 }
 
 button#createfoto:hover {
     color: white;
-    box-shadow: inset 0 -100px 0 0 #d458b9;
+    box-shadow: inset 0 -100px 0 0 #c47cb4;
 }
 
 button#createfoto:active {
